--- a/src/app.css
+++ b/src/app.css
@@ -77,8 +77,11 @@
     @apply bg-background text-foreground h-full;
   }
   #app,
-  #root-div,
-  main {
+  #root-div {
     @apply h-full;
+  }
+
+  .header {
+    @apply flex h-16 w-full shrink-0 items-center gap-2 transition-[width,height] ease-linear group-has-[[data-collapsible=icon]]/sidebar-wrapper:h-12;
   }
 }
